--- a/nginx_conf/vhosts/domian.conf
+++ b/nginx_conf/vhosts/domian.conf
@@ -1,16 +1,44 @@
 server {
         listen      80;
-        server_name domain;
-        
-
+        listen       443 ssl; 
+        server_name domain.com;
+        ssl_certificate /usr/local/nginx/domain.com.crt;
+        ssl_certificate_key /usr/local/nginx/domain.com.key;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_ciphers TLS13-AES-256-GCM-SHA384:TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-128-GCM-SHA256:TLS13-AES-128-CCM-8-SHA256:TLS13-AES-128-CCM-SHA256:EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_timeout 10m;
+        ssl_session_cache builtin:1000 shared:SSL:10m;
+        ssl_buffer_size 1400;
+        add_header Strict-Transport-Security max-age=15768000;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        if ($ssl_protocol = "") { return 301 https://$host$request_uri; } 
+       location ~ .*\.(|gz|zip|rar)$ {
+               return 400;
+       }
     access_log  ./logs/domain_access.log  main;
-
-
     location ~ /?demo=1&game_code=51 {
-    
         return 499;
-    
     }
+#######cc
+if ($query_string ~* ".*('|--|SELECT|INSERT|DROP|UPDATE|DELETE|WHERE|ifnull|insert|select|drop|truncate|update|grant|where|iframe|dbappsecurity|confirm|innertext|%73%65%6c%65%63%74|%69%6e%73%65%72%74|%64%72%6f%70|%75%70%64%61%74%65|%64%65%6c%65%74%65|%77%68%65%72%65|%61%6e%64|%6c%69%6b%65|%75%73%65%72%5f%69%6e%66%6f|%53%45%4c%45%43%54|%49%4e%53%45%52%54|%44%52%4f%50|%55%50%44%41%54%45|%44%45%4c%45%54%45|%57%48%45%52%45|%41%4e%44|%4c%49%4b%45|class).*")
+{ return 505; }
+if ($uri ~ .(viewsource.jsp)$) { return 506; }
+if ($uri ~ .(/~).*) { return 507; }
+if ($query_string ~ "[a-zA-Z0-9_]=http://") { return 508; }
+if ($query_string ~ "[a-zA-Z0-9_]=(\.\.//?)+") { return 509; }
+if ($query_string ~ "[a-zA-Z0-9_]=/([a-z0-9_.]//?)+") { return 509; }
+if ($http_user_agent ~ ApacheBench|WebBench|Jmeter|JoeDog|Havij|GetRight|TurnitinBot|GrabNet|masscan|mail2000|github|wget|curl) { return 444; }
+if ($request_uri ~* "(cost\()|(concat\()") { return 504; }
+if ($request_uri ~* "[+|(%20)]union[+|(%20)]") { return 504; }
+if ($request_uri ~* "[+|(%20)]and[+|(%20)]") { return 504; }
+if ($request_uri ~* "[+|(%20)]select[+|(%20)]") { return 504; }
+if ($request_uri ~* "[+|(%20)]or[+|(%20)]") { return 504; }
+if ($request_uri ~* "[+|(%20)]delete[+|(%20)]") { return 504; }
+if ($request_uri ~* "[+|(%20)]update[+|(%20)]") { return 504; }
+if ($request_uri ~* "[+|(%20)]insert[+|(%20)]") { return 504; }
+#######
         location / {
             #proxy_cache mycache;
             proxy_pass http://domain;
