--- a/nginx_conf/vhosts/domian.conf
+++ b/nginx_conf/vhosts/domian.conf
@@ -65,8 +65,8 @@ if ($request_uri ~* "[+|(%20)]insert[+|(%20)]") { return 504; }
 server {
     listen      443 ssl http2;
     ssl on;
-    ssl_certificate      /usr/local/nginx/conf/ssl/wgle5.com/c8979709781fdced.crt;
-    ssl_certificate_key  /usr/local/nginx/conf/ssl/wgle5.com/wgle5.com.key;
+    ssl_certificate      /usr/local/nginx/conf/ssl/domain.com/domain.crt;
+    ssl_certificate_key  /usr/local/nginx/conf/ssl/domain.com/domain.com.key;
     server_name domain;
     include ./vhosts/ubs/domian_ssl_template.txt;
 }
